data fetch and insert or update

--- a/views/user.html
+++ b/views/user.html
@@ -10,7 +10,9 @@
 
 <body>
     <div>
-       <a href="/logout"><button id="logOut">LogOut</button></a>
+        <a href="/logout">
+            <button id="logOut">LogOut</button>
+        </a>
     </div>
     <div style="margin-left: 20px;margin-top: 70px;">
         <div style="float:left;margin-right: 100px;">
@@ -21,6 +23,11 @@
             <label>TO</label>
             <input id="datepicker2" type="text" />
         </div>
+    </div>
+    <div style="margin-top: 2%;">
+        <button id="showApplydate">show Date</button>
+    </div>
+    <div id="userdate">
     </div>
     <div id="dateshow" style="margin-top: 50px;">
     </div>
